--- a/public/leader.html
+++ b/public/leader.html
@@ -49,6 +49,11 @@
     <link rel="stylesheet" href="/public/css/leader.css"/>
     <script src="/public/js/vendor/jquery.min.js"></script>
     <script src="/public/js/vendor/bootstrap.min.js"></script>
+    <style id="style"></style>
+    <script>
+        var phoneScale = (parseInt(window.screen.width-30))/316;
+        document.getElementById('style').innerHTML='svg{transform: scale('+phoneScale+');}';
+    </script>
     <!--<script type="text/javascript" src="http://api.map.baidu.com/api?type=quick&ak=WQnu4w1cseOB42bSvZv7t5uP&v=1.0"></script>-->
 </head>
 <body ng-app="leader-module">
@@ -58,7 +63,7 @@
     </div>
 </header>
 <leader-header></leader-header>
-<div class="container" ng-view>
+<div class="container-fluid" ng-view>
 </div>
 </body>
 <script src="/public/js/vendor/angular.min.js"></script>
