项目主管 费效比和pk榜 图表 接口对接

--- a/public/marketing.html
+++ b/public/marketing.html
@@ -51,7 +51,7 @@
     <style id="style"></style>
     <script>
         var phoneScale = (parseInt(window.screen.width)-30)/316;
-        document.getElementById('style').innerHTML='svg{transform: scale('+phoneScale+');margin-left:0px;}';
+        document.getElementById('style').innerHTML='svg{transform: scale('+phoneScale+');}';
     </script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?type=quick&ak=WQnu4w1cseOB42bSvZv7t5uP&v=1.0"></script>
 </head>
