--- a/public/manager.html
+++ b/public/manager.html
@@ -35,6 +35,7 @@
                             location.assign('/service');break;
                     }
                 }
+                else if(xmlHttp.status == 401)location.assign('/');
             }
         }
         doGet(localStorage.getItem('ip')+'retailer/user/getUserInfo?sessionID='+sID);
