--- a/public/service.html
+++ b/public/service.html
@@ -36,6 +36,7 @@
                             sessionStorage.setItem('uuid',cate.uuid);
                     }
                 }
+                else if(xmlHttp.status == 401)location.assign('/');
             }
         }
         doGet(localStorage.getItem('ip')+'retailer/user/getUserInfo?sessionID='+sID);
