--- a/public/leader.html
+++ b/public/leader.html
@@ -55,7 +55,7 @@
         var phoneScale = (parseInt(window.screen.width-30))/316;
         document.getElementById('style').innerHTML='svg{transform: scale('+phoneScale+');}';
     </script>
-    <!--<script type="text/javascript" src="http://api.map.baidu.com/api?type=quick&ak=WQnu4w1cseOB42bSvZv7t5uP&v=1.0"></script>-->
+    <script type="text/javascript" src="http://api.map.baidu.com/api?type=quick&ak=WQnu4w1cseOB42bSvZv7t5uP&v=1.0"></script>
 </head>
 <body ng-app="leader-module">
 <leader-header></leader-header>
