--- a/public/manager.html
+++ b/public/manager.html
@@ -57,7 +57,8 @@
 </body>
 <script src="/public/js/vendor/angular.min.js"></script>
 <script src="/public/js/vendor/angular-route.min.js"></script>
-<script src="/public/js/ng-services/D3-service.js"></script>
+<script src="/public/js/ng-services/dataTable-directives.js"></script>
+<!--<script src="/public/js/ng-services/D3-service.js"></script>-->
 <script src="/public/js/manager/manager-app.js"></script>
 <script src="/public/js/manager/manager-controllers.js"></script>
 <script src="/public/js/manager/manager-controllers-ranking.js"></script>
