--- a/public/leader.html
+++ b/public/leader.html
@@ -64,8 +64,10 @@
 </body>
 <script src="/public/js/vendor/angular.min.js"></script>
 <script src="/public/js/vendor/angular-route.min.js"></script>
-<script src="/public/js/ng-services/D3-service.js"></script>
-<script src="/public/js/ng-services/get-chart-data-service.js"></script>
+<script src="/public/js/vendor/jquery.dataTables.js"></script>
+<script src="/public/js/ng-services/dataTable-directives.js"></script>
+<!--<script src="/public/js/ng-services/D3-service.js"></script>-->
+<!--<script src="/public/js/ng-services/get-chart-data-service.js"></script>-->
 <script src="/public/js/leader/leader-app.js"></script>
 <script src="/public/js/leader/leader-controllers.js"></script>
 <script src="/public/js/leader/leader-controllers-ranking.js"></script>
