--- a/public/marketing.html
+++ b/public/marketing.html
@@ -64,10 +64,10 @@
 </body>
 <script src="/public/js/vendor/angular.min.js"></script>
 <script src="/public/js/vendor/angular-route.min.js"></script>
-<!--<script src="/public/js/vendor/angular-sanitize.min.js"></script>-->
-<script src="/public/js/ng-services/D3-service.js"></script>
+<script src="/public/js/ng-services/dataTable-directives.js"></script>
+<!--<script src="/public/js/ng-services/D3-service.js"></script>-->
 <script src="/public/js/ng-services/get-info-service.js"></script>
-<script src="/public/js/ng-services/get-chart-data-service.js"></script>
+<!--<script src="/public/js/ng-services/get-chart-data-service.js"></script>-->
 <script src="/public/js/marketing/marketing-app.js"></script>
 <script src="/public/js/marketing/marketing-controllers.js"></script>
 <script src="/public/js/marketing/marketing-controllers-customer.js"></script>
