--- a/public/marketing.html
+++ b/public/marketing.html
@@ -64,6 +64,7 @@
 </body>
 <script src="/public/js/vendor/angular.min.js"></script>
 <script src="/public/js/vendor/angular-route.min.js"></script>
+<script src="/public/js/vendor/jquery.dataTables.js"></script>
 <script src="/public/js/ng-services/dataTable-directives.js"></script>
 <!--<script src="/public/js/ng-services/D3-service.js"></script>-->
 <script src="/public/js/ng-services/get-info-service.js"></script>
