--- a/public/leader.html
+++ b/public/leader.html
@@ -68,6 +68,7 @@
 <script src="/public/js/ng-services/dataTable-directives.js"></script>
 <!--<script src="/public/js/ng-services/D3-service.js"></script>-->
 <!--<script src="/public/js/ng-services/get-chart-data-service.js"></script>-->
+<script src="/public/js/ng-services/get-info-service.js"></script>
 <script src="/public/js/leader/leader-app.js"></script>
 <script src="/public/js/leader/leader-controllers.js"></script>
 <script src="/public/js/leader/leader-controllers-ranking.js"></script>
