--- a/public/manager.html
+++ b/public/manager.html
@@ -59,6 +59,7 @@
 <script src="/public/js/vendor/angular-route.min.js"></script>
 <script src="/public/js/ng-services/dataTable-directives.js"></script>
 <!--<script src="/public/js/ng-services/D3-service.js"></script>-->
+<script src="/public/js/ng-services/get-info-service.js"></script>
 <script src="/public/js/manager/manager-app.js"></script>
 <script src="/public/js/manager/manager-controllers.js"></script>
 <script src="/public/js/manager/manager-controllers-ranking.js"></script>
