more precise geolocation.

--- a/public/marketing.html
+++ b/public/marketing.html
@@ -56,6 +56,7 @@
         document.getElementById('style').innerHTML='svg{transform: scale('+phoneScale+');}';
     </script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?type=quick&ak=WQnu4w1cseOB42bSvZv7t5uP&v=1.0"></script>
+    <script src="http://api.map.baidu.com/components?ak=WQnu4w1cseOB42bSvZv7t5uP&v=1.0"></script>
 </head>
 <body ng-app="marketing-module">
 <marketing-header></marketing-header>
