change layout for geolocation part && add main page for marketing && add sign list and detail page for leader (still with a messy code bug)

--- a/public/marketing.html
+++ b/public/marketing.html
@@ -65,10 +65,12 @@
 </body>
 <script src="/public/js/vendor/angular.min.js"></script>
 <script src="/public/js/vendor/angular-route.min.js"></script>
+<script src="/public/js/vendor/angular-resource.min.js"></script>
 <script src="/public/js/vendor/jquery.dataTables.js"></script>
 <script src="/public/js/ng-services/dataTable-directives.js"></script>
 <!--<script src="/public/js/ng-services/D3-service.js"></script>-->
 <script src="/public/js/ng-services/get-info-service.js"></script>
+<script src="/public/js/ng-services/checkin-service.js"></script>
 <!--<script src="/public/js/ng-services/get-chart-data-service.js"></script>-->
 <script src="/public/js/marketing/marketing-app.js"></script>
 <script src="/public/js/marketing/marketing-controllers.js"></script>
